--- a/static/css/index.css
+++ b/static/css/index.css
@@ -153,12 +153,6 @@ summary:hover {
     border-bottom-right-radius: 0 !important;
     border-bottom-left-radius: 0 !important;
 }
-summary::marker {
-    content: none;
-}
-summary::-webkit-details-marker {
-    content: none;
-}
 #questions details .details-answer {
     color: var(--black);
     margin-top: 0;
@@ -168,22 +162,6 @@ summary::-webkit-details-marker {
     border-bottom-left-radius: var(--rd);
     border: .2em solid var(--black);
     border-top: none;
-}
-
-.down-arrow, .arrow {
-    display: inline-block;
-    margin-right: .5em;
-    height: 10px;
-    width: 10px;
-    background: var(--white);
-    clip-path: polygon(0% 0%, 100% 50%, 0% 100%); 
-    transition: transform .5s ease;
-}
-.down-arrow {
-    transform: rotate(90deg);
-}
-.arrow-rotate {
-    transform: rotate(90deg);
 }
 
 
@@ -246,6 +224,7 @@ textarea {
     border-radius: var(--rd);
     background: var(--white);
     box-shadow: inset 0 0 5px black;
+    box-sizing: border-box;
 }
 
 .left-list-container {
